--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </mat-drawer>
 
   <div class="example-sidenav-content">
-    <button type="button" mat-button (click)="drawer.toggle()">
+    <button type="button" class="btn btn-success" mat-button (click)="drawer.toggle()">
       Toggle sidenav
     </button>
     <router-outlet></router-outlet>
