:ok_hand: Creating the components and design.

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <mat-drawer #drawer class="example-sidenav" [opened]="!mobileQuery.matches" mode="side">
   <div class="pt-3 pl-3">
-    <img src="./../assets/images/logo.svg" width="65%" alt="Mi Águila logo">
+    <img src="./../assets/images/logo.svg" width="55%" alt="Mi Águila logo">
   </div>
 
   <div class="user-section d-flex flex-column align-items-center">
@@ -9,11 +9,11 @@
     <p>Beneficiario</p>
   </div>
 
-  <hr class="p-3">
+  <hr>
 
-  <ul class="list-group pl-4">
+  <ul class="list-group">
     <li class="list-group-item border-0 active">
-      <img src="./../../../../assets/images/eagle.svg" class="mr-2" width="15%" alt="Eagle">
+      <img src="./../../../../assets/images/eagle.svg" class="mr-2" width="10%" alt="Eagle">
       <a routerLink="/" routerLinkActive="active">
         Pedir Águila
       </a>
