--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -1,5 +1,6 @@
 .example-sidenav {
   padding-left: 1rem;
+  width: 300px;
 }
 
 .user-photo {
@@ -18,7 +19,7 @@ li.active {
 li {
   i,
   a {
-    color: #787c7db5;
+    color: var(--gray-color);
   }
 
   i {
