--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -19,7 +18,11 @@ $miaguilatest-accent: mat-palette($mat-pink, A200, A100, A400);
 $miaguilatest-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$miaguilatest-theme: mat-light-theme($miaguilatest-primary, $miaguilatest-accent, $miaguilatest-warn);
+$miaguilatest-theme: mat-light-theme(
+  $miaguilatest-primary,
+  $miaguilatest-accent,
+  $miaguilatest-warn
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -28,5 +31,16 @@ $miaguilatest-theme: mat-light-theme($miaguilatest-primary, $miaguilatest-accent
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+:root {
+  --primary-color: #0c9;
+  --gray-color: #787c7db5;
+}
