:ok_hand: Listing the favorites from the api.

--- a/src/app/modules/ask-eagle/components/direction/direction.component.html
+++ b/src/app/modules/ask-eagle/components/direction/direction.component.html
@@ -7,8 +7,8 @@
     </div>
 
     <div class="col-9 pl-0">
-      <p class="m-0">Mi águila</p>
-      <small>Carrera 2, 33-93</small>
+      <p class="m-0">{{ data.name }}</p>
+      <small>{{ data.address }}</small>
     </div>
   </div>
 </div>
