--- a/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.html
+++ b/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.html
@@ -57,9 +57,17 @@
         <h5 class="mt-2">Favoritos</h5>
 
         <div class="row">
-          <div class="col-12 trips">
-            <app-direction *ngFor="let item of [1,2,3,4,5,8,10,9]"></app-direction>
+          <div class="col-12 trips" *ngIf="!(userLoading$ | async); else loading">
+            <app-direction *ngFor="let address of favorites$ | async" [data]="address"></app-direction>
           </div>
+
+          <ng-template #loading>
+            <div class="text-center w-100">
+              <div class="spinner-border text-success" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
