:sparkles: General changes to the view of ordering an eagle and components.

--- a/src/app/modules/ask-eagle/components/direction/direction.component.scss
+++ b/src/app/modules/ask-eagle/components/direction/direction.component.scss
@@ -5,6 +5,10 @@
     width: 30px;
     height: 30px;
   }
+  cursor: pointer;
+  &.disabled {
+    filter: opacity(0.5);
+  }
 }
 
 .flex-align-center {
