--- a/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.html
+++ b/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.html
@@ -3,7 +3,7 @@
 
   <div class="ask-stepper">
     <mat-accordion class="example-headers-align" multi>
-      <mat-expansion-panel #expansion>
+      <mat-expansion-panel #expansion [expanded]="true">
         <mat-expansion-panel-header>
           <div class="card ask-stepper__header mt-2 ml-4 mr-4 mt-4">
             <div class="row">
@@ -65,49 +65,7 @@
         
             <div class="row">
               <div class="col-12 trips" *ngIf="!(userLoading$ | async); else loading">
-                <app-direction *ngFor="let address of [
-                {
-                  'id': 'eagle1',
-                  'name': 'Mi casa',
-                  'address': 'Mz v casa 30',
-                  'location': [-74.201609, 11.2269008]
-                },
-                {
-                  'id': 'eagle2',
-                  'name': 'Universidad del Magdalena',
-                  'address': 'Calle 32 ##22-08',
-                  'location': [-74.1948443, 11.2263842]
-                },
-                {
-                  'id': 'eagle3',
-                  'name': 'MAKRO SUPERMAYORISTA S.A',
-                  'address': 'Carrera 15 av. Ferrocarril # 29-364',
-                  'location': [-74.2010027, 11.229608]
-                },
-                {
-                  'id': 'eagle4',
-                  'name': 'MAKRO SUPERMAYORISTA S.A',
-                  'address': 'Carrera 15 av. Ferrocarril # 29-364',
-                  'location': [-74.2010027, 11.229608]
-                },
-                {
-                  'id': 'eagle5',
-                  'name': 'MAKRO SUPERMAYORISTA S.A',
-                  'address': 'Carrera 15 av. Ferrocarril # 29-364',
-                  'location': [-74.2010027, 11.229608]
-                },{
-                  'id': 'eagle4',
-                  'name': 'MAKRO SUPERMAYORISTA S.A',
-                  'address': 'Carrera 15 av. Ferrocarril # 29-364',
-                  'location': [-74.2010027, 11.229608]
-                },
-                {
-                  'id': 'eagle5',
-                  'name': 'MAKRO SUPERMAYORISTA S.A',
-                  'address': 'Carrera 15 av. Ferrocarril # 29-364',
-                  'location': [-74.2010027, 11.229608]
-                }
-              ]" 
+                <app-direction *ngFor="let address of favorites$ | async" 
                   [stepIndex]="stepper.selectedIndex" [data]="address" 
                   [disabled]="origin?.id === address.id || destination?.id === address.id">
                 </app-direction>
