:books: Update the readme file and design.

--- a/src/app/modules/ask-eagle/components/direction/direction.component.html
+++ b/src/app/modules/ask-eagle/components/direction/direction.component.html
@@ -8,7 +8,7 @@
 
     <div class="col-9 pl-0">
       <p class="m-0">{{ data.name }}</p>
-      <small>{{ data.address }} {{ disabled }}</small>
+      <small>{{ data.address }}</small>
     </div>
   </div>
 </div>
