--- a/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.scss
+++ b/src/app/modules/ask-eagle/pages/ask-eagle/ask-eagle.component.scss
@@ -90,7 +90,9 @@
 @media (max-width: 425px) {
   .ask-stepper {
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
+    height: auto;
+    top: 5vh;
   }
 }
 
